--- a/vercel.json
+++ b/vercel.json
@@ -12,7 +12,7 @@
   "env": {
     "APP_ENV": "production",
     "APP_DEBUG": "false",
-    "APP_URL": "",
+    "APP_URL": "https://clininc-system-hne1282a2-abdulrahmanabdos-projects.vercel.app/",
     "APP_CONFIG_CACHE": "/tmp/config.php",
     "APP_EVENTS_CACHE": "/tmp/events.php",
     "APP_PACKAGES_CACHE": "/tmp/packages.php",
