--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,10 @@
 {
   "version": 2,
+  "framework": null,
   "functions": {
-    "api/index.php": { "runtime": "vercel-php@0.7.3" }
+    "api/index.php": {
+      "runtime": "vercel-php@0.6.0"  
+    }
   },
   "routes": [
     {
@@ -11,15 +14,16 @@
   ],
   "env": {
     "APP_ENV": "production",
-    "APP_DEBUG": "false",
-    "APP_URL": "https://clininc-system-hne1282a2-abdulrahmanabdos-projects.vercel.app/",
-    "APP_KEY": "base64:vXTNhrU/mjPNLRPcpm7ytSEmt8aSrDu+iQXJ5SEGcHU=",
+    
+    "APP_URL": "https://yourprojectdomain.com",
+
     "APP_CONFIG_CACHE": "/tmp/config.php",
     "APP_EVENTS_CACHE": "/tmp/events.php",
     "APP_PACKAGES_CACHE": "/tmp/packages.php",
     "APP_ROUTES_CACHE": "/tmp/routes.php",
     "APP_SERVICES_CACHE": "/tmp/services.php",
     "VIEW_COMPILED_PATH": "/tmp",
+
     "CACHE_DRIVER": "array",
     "LOG_CHANNEL": "stderr",
     "SESSION_DRIVER": "cookie"
