--- a/vercel.json
+++ b/vercel.json
@@ -14,7 +14,7 @@
   ],
   "env": {
     "APP_ENV": "production",
-    
+    "APP_DEBUG": "true",
     "APP_URL": "https://yourprojectdomain.com",
 
     "APP_CONFIG_CACHE": "/tmp/config.php",
