--- a/vercel.json
+++ b/vercel.json
@@ -15,6 +15,7 @@
   "env": {
     "APP_ENV": "production",
     "APP_DEBUG": "true",
+    "APP_KEY": "base64:vXTNhrU/mjPNLRPcpm7ytSEmt8aSrDu+iQXJ5SEGcHU=",
     "APP_URL": "https://yourprojectdomain.com",
 
     "APP_CONFIG_CACHE": "/tmp/config.php",
