--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,9 @@
         "api/index.php": {
             "runtime": "vercel-php@0.6.0"
         }
-    },
+    },"require": {
+    "doctrine/dbal": "^4.2"
+},
     "routes": [
         {
             "src": "/build/assets/(.*)",
