--- a/vercel.json
+++ b/vercel.json
@@ -3,22 +3,12 @@
   "framework": null,
   "functions": {
     "api/index.php": {
-      "runtime": "vercel-php@0.7.3",
-      "extensions": ["curl", "pgsql", "pdo_pgsql"]
+      "runtime": "vercel-php@0.8.0"
     }
   },
-  "builds": [
-    {
-      "src": "**/*.php",
-      "use": "@vercel/php",
-      "config": {
-        "phpExtensions": ["curl", "pgsql", "pdo_pgsql"]
-      }
-    }
-  ],
   "routes": [
     {
-      "src": "/build/assets/(.*)",
+      "src": "/build/assets/(.*)",  
       "dest": "/build/assets/$1"
     },
     {
@@ -33,5 +23,6 @@
       "src": "/(.*)",
       "dest": "/api/index.php"
     }
+    
   ]
 }
