edit 12 on vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -1,24 +1,27 @@
 {
-  "version": 2,
-  "functions": {
-    "api/*.php": {
-      "runtime": ""
-    }
-  },
-  "builds": [
-    {
-      "src": "**/*.php",
-      "use": "@vercel/php",
-      "config": {
-        "phpVersion": "8.2",
-        "includePaths": ["**"]
-      }
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/api/index.php"
-    }
-  ]
+    "version": 2,
+    "framework": null,
+    "functions": {
+        "api/index.php": {
+            "runtime": "vercel-php@0.6.0"
+        }
+    },
+    "routes": [
+        {
+            "src": "/build/assets/(.*)",
+            "dest": "/build/assets/$1"
+        },
+        {
+            "src": "/images/(.*)",
+            "dest": "/public/images/$1"
+        },
+        {
+            "src": "/(.*\\.php)",
+            "dest": "/api/$1"
+        },
+        {
+            "src": "/(.*)",
+            "dest": "/api/index.php"
+        }
+    ]
 }
