--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/sanctum": "^4.1",
         "laravel/tinker": "^2.10.1",
         "spatie/laravel-permission": "^6.17",
+        "stichoza/google-translate-php": "^5.3",
         "tymon/jwt-auth": "^2.2"
     },
     "require-dev": {
